<?xml version="1.0"?>
<package format="2">
  <name>gtsam_ros</name>
  <version>0.0.0</version>
  <description>The gtsam_ros package</description>
  <maintainer email="carl_liu@todo.todo">carl_liu</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
</package>
